# batear

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  mkdocs.yml  sdkconfig.defaults  sdkconfig.detector  sdkconfig.wired_detector
.github/workflows/: cppcheck.yml  docs.yml  esp-idf-build.yml  main.yml  size_report.yml
docs/: CNAME  adding-boards.md  api.md  architecture.md  build-flash.md  configuration.md  getting-started.md  hardware.md  how-it-works.md  index.md
docs/flasher/: index.html  manifest_wired_detector.json  nvs_gen.js
main/: CMakeLists.txt  Kconfig.projbuild  audio_features.c  audio_features.h  audio_task.c  config_console.c  eth_mqtt_task.cpp  eth_mqtt_task.h  http_api.cpp  http_api.h  idf_component.yml  lora_task.cpp  lorawan_provision.c  lorawan_provision.h  main.c  main.cpp  manual_capture.c  manual_capture.h  ml_classifier.cpp  ml_classifier.h  ntp_time.c  ntp_time.h  pin_config.h  tf_recorder.c  tf_recorder.h
models/: drone_v0_dummy.tflite
tools/: gen_dummy_model.py  requirements.txt
